--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="chat-container">
-    <div class="chat-header">🎬 MovieBot</div>
+    <div class="chat-header">MovieBot</div>
     <div id="chat-messages" class="chat-messages"></div>
     <div class="chat-input-area">
         <input type="text" id="user-input" placeholder="Ask me about movies..." autocomplete="off">
